--- a/static/style.css
+++ b/static/style.css
@@ -10,9 +10,16 @@
 }
 body {
   background: #DDD0C8;
+
+  
+}
+.navbar{
+  margin: auto;
+  max-width: 1400px;
+  position: sticky;
 }
 .nav {
-  position: relative;
+  position: absolute;
   top: 0;
   left: 0;
   width: 100%;
@@ -135,7 +142,7 @@ body {
     padding-top: 100px;
     row-gap: 30px;
     flex-direction: column;
-    background-color: #000000;
+    background-color: rgb(221, 208, 200, 0.9);
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
     transition: all 0.4s ease;
     z-index: 100;
@@ -262,10 +269,10 @@ h1 {
   overflow: hidden;
   display: block;
   padding: 1vh ;
-  background: #efecdb;
+  background: #ffffff;
   box-shadow: 0 10px 50px #323232;
 }
-img {
+.img-wrapper a img {
   max-width: 45vh;
   max-height: 50vh;
   transition: .5s;
@@ -290,6 +297,21 @@ p {
 /* product */
 
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700;800&display=swap");
+
+.product{
+  position: relative;
+  overflow: hidden;
+  height: 40px;
+}
+
+.product-category{
+  padding-left: 15px;
+  font-size: 30px;
+  font-weight: 500;
+  margin-bottom: 40px;
+  text-transform: capitalize;
+}
+
 
 body .container {
   display: flex;
@@ -420,9 +442,7 @@ body .container .card {
   height: 400px;
   max-width: 300px;
   border-radius: 5px;
-  background: rgba(255, 255, 255, 0.05);
-  -webkit-backdrop-filter: blur(2px);
-          backdrop-filter: blur(2px);
+  background: #ffffff80;
   border: 1px solid rgba(255, 255, 255, 0.2);
   border-right-color: rgba(255, 255, 255, 0.1);
   border-bottom-color: rgba(255, 255, 255, 0.1);
@@ -434,11 +454,43 @@ body .container .card {
   align-items: center;
   flex-direction: column;
 }
+
+
+.glassBox {
+  --shine-deg: 45deg;
+
+  max-width: 28rem;
+
+  padding: 4rem 2rem;
+  background-repeat: no-repeat;
+  background-position: -100% 0, 0 0;
+  background-image: linear-gradient(
+    var(--shine-deg),
+    transparent 20%,
+    transparent 40%,
+    rgba(221, 221, 221, 0.2) 50%,
+    rgba(214, 208, 208, 0.2) 55%,
+    transparent 70%,
+    transparent 100%
+  );
+  background-size: 250% 250%, 100% 100%;
+  transition: background-position 1s ease;
+}
+
+.glassBox:hover {
+  background-position: 200%,0, 0 0;
+  transition-duration: 1.5s;
+  background-color: #323232;
+}
+
+
+
 .glassBox, .glassBox * {
   box-sizing: border-box;
   transition: 400ms;
 }
 .glassBox__imgBox img {
+  z-index: 1000px;
   display: block;
   width: 100%;
   height: auto;
@@ -446,27 +498,64 @@ body .container .card {
 .glassBox__title {
   text-align: center;
   margin-top: 15px;
-  color: #00F;
+  color: #333333;
   font-size: 20px;
-  font-weight: 400;
+  font-weight: 1000;
   font-family: "Lato";
 }
+.glassBox:hover .glassBox__title {
+  color: #fff;
+}
+
+.glassBox:hover .glassBox__title {
+  color: #fff;
+}
+
+.glassBox:hover .glassBox__content {
+  color: #fff;
+}
+
+
+
 .glassBox__content{
   
   right: 15px;
-  bottom: 15px;
+  top: 15px;
+  margin-right: 15px;
   left: 15px;
   text-align: center;
-  color: #000;
+  color: #000000be;
   font-size: 14px;
   font-family: "Lato";
   letter-spacing: 0.1em;
-  opacity: 0;
+}
+
+.product-price{
+  font-weight: 900;
+  font-size: 20px;
+  color: #ffffff;
 }
 
 .glassBox:hover .glassBox__imgBox {
-  transform: translateY(-50px);
+  transform: translateY(-40px);
 }
 .glassBox:hover .glassBox__imgBox img {
-  transform: translate(-20px, -40px) rotate(-15deg) scale(1.4);
+  transform: translate(-20px, -40px) rotate(-15deg) scale(1.2);
+}
+.glassBox .glassBox__Button{
+  margin-top: 20px;
+  
+}
+.glassBox .glassBox__Button a {
+  font-size: 25px;
+  padding: 12px 36px;
+  margin-top: 20px;
+  font-weight: 400;
+  border-radius: 6px;
+  border: 1px solid #ffffff80;
+  transition: all 0.3s ease;
+}
+
+.glassBox:hover .glassBox__Button a{
+  background: #ffffff80;
 }
