--- a/static/style.css
+++ b/static/style.css
@@ -295,7 +295,7 @@ p {
 
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700;800&display=swap");
 .
-.product{
+.Products{
   position: relative;
   overflow: hidden;
   height: 40px;
@@ -474,10 +474,10 @@ body .container .card {
   left: 15px;
   text-align: center;
   color: #fff;
-  font-size: 14px;
+  font-size: 12px;
   font-family: "Lato";
   letter-spacing: 0.1em;
-  opacity: 1;
+  opacity: 0.7;
   transition: opacity 0.3s ease-in-out;
 }
 .glassBox__price {
