--- a/templates/login.html
+++ b/templates/login.html
@@ -20,7 +20,7 @@
           <i class="uil uil-times navCloseBtn"></i>
           <li><a href="#">Home</a></li>
           <li><a href="{{url_for('contact')}}">Contact Us</a></li>
-          <li><a href="{{url_for('reg')}}">About us</a></li>
+          <li><a href="#">About us</a></li>
         </ul>
         <i class="uil uil-search search-icon" id="searchIcon"></i>
         <div class="search-box">
@@ -54,6 +54,8 @@
 		
 		<div class="login_signup">Don't have an account? <a href="{{ url_for('reg') }}" id="signup">Signup</a></div>
       </div>
+
+      
     </body>
     <script src="/static/js/nav.js"></script>
 </html>
