--- a/static/css/loginreg.css
+++ b/static/css/loginreg.css
@@ -1,120 +1,150 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap");
 
-*{
-    padding: 0;
-    box-sizing: border-box;
-    font-family: "Poppins", sans-serif;
-}
+* {
 
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Poppins", sans-serif;
+}
 body {
   
-    background: #000
-    
-  }
-  .nav {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    padding: 15px 100px;
-    z-index: 1100;
-    background: #000000;
-    transition: all 0.4s ease;
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-  }
-  .nav,
-  .nav .nav-links {
-    display: flex;
-    align-items: center;
-  }
-  .nav {
-    justify-content: space-between;
-  }
-  .nav.sticky {
-    padding: 15px 0;
-    background: #000000;
-  }
+  background: #000
   
-  .nav a {
-    color: #ffffff;
-    
-    text-decoration: none;
-  }
-  .nav .logo {
-    font-size: 22px;
-    font-weight: 500;
-  }
+}
+.nav {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  padding: 15px 100px;
+  z-index: 1100;
+  background: #000000;
+  transition: all 0.4s ease;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+}
+.nav,
+.nav .nav-links {
+  display: flex;
+  align-items: center;
+}
+.nav {
+  justify-content: space-between;
+}
+.nav.sticky {
+  padding: 15px 0;
+  background: #000000;
+}
 
-  .nav .logout {
-    font-size: 22px;
-    font-weight: 500;
-    color: #ffffff;
-  }
+.nav a {
+  color: #ffffff;
+  text-decoration: none;
+}
+.nav .logo {
+  font-size: 22px;
+  font-weight: 500;
+}
 
-  .nav .nav-links {
-    column-gap: 40px;
-    list-style: none;
-  }
-  .nav .nav-links a {
-    font-weight: 500;
-    transition: all 0.2s linear;
-  }
-  
-  .nav .nav-links li :hover{
-  
-    border: 1px solid #323232;
-    padding: 7px;
-    border-radius: 10px;
-    box-shadow: 0 3px #323232;
-  }
-  
-  .nav.openSearch .nav-links a {
-    opacity: 0;
-    pointer-events: none;
-  }
-  .nav .search-icon {
-    color: #ffffff;
-    font-size: 20px;
-    cursor: pointer;
-  }
-  .nav .search-box {
-    position: absolute;
-    right: 620px;
-    height: 45px;
-    max-width: 250px;
-    width: 50%;
-    opacity: 0;
-    pointer-events: none;
-    transition: all 0.2s linear;
-  }
-  .nav.openSearch .search-box {
-    opacity: 1;
-    pointer-events: auto;
-  }
-  .search-box .search-icon {
-    position: absolute;
-    left: 15px;
-    top: 50%;
-    left: 15px;
-    color: #323232;
-    transform: translateY(-50%);
-  }
-  .search-box input {
-    height: 100%;
-    width: 100%;
-    border: none;
-    outline: none;
-    border-radius: 6px;
-    background-color: #fff;
-    padding: 0 15px 0 45px;
-  }
+.nav .logo:hover{
+  color: #D4AF37;
+}
 
-  .nav .navOpenBtn,
-  .nav .navCloseBtn {
-    display: none;
-  }
+.nav .logout i{
   
-  
+  font-weight: 500;
+  font-size: 20px;
+  color: #ffffff;
+  font-family: "Poppins", sans-serif;
+}
+
+.nav .logout i:hover{
+  color: #D4AF37;
+}
+
+.nav .nav-links {
+  column-gap: 40px;
+  list-style: none;
+}
+.nav .nav-links a {
+  transition: all 0.2s linear;
+}
+
+.nav .nav-links li {
+  color: white;
+  text-decoration: none;
+  border: none;
+  background: none;
+  font-weight: 600;
+  font-family: 'Poppins', sans-serif;
+}
+
+.nav .nav-links li::before {
+  margin-left: auto;
+}
+
+.nav .nav-links li::after, .nav .nav-links li::before {
+  content: '';
+  width: 0%;
+  height: 2px;
+  background: #D4AF37;
+  display: block;
+  transition: 0.5s;
+}
+
+.nav .nav-links li:hover::after, .nav .nav-links li:hover::before {
+  width: 100%;
+}
+
+.nav.openSearch .nav-links a {
+  opacity: 0;
+  pointer-events: none;
+}
+.nav .search-icon {
+  color: #ffffff;
+  font-size: 20px;
+  cursor: pointer;
+}
+
+.nav .search-icon:hover{
+  color: #D4AF37;
+}
+
+.nav .search-box {
+  position: absolute;
+  right: 620px;
+  height: 45px;
+  max-width: 250px;
+  width: 50%;
+  opacity: 0;
+  pointer-events: none;
+  transition: all 0.2s linear;
+}
+.nav.openSearch .search-box {
+  opacity: 1;
+  pointer-events: auto;
+}
+.search-box .search-icon {
+  position: absolute;
+  left: 15px;
+  top: 50%;
+  left: 15px;
+  color: #323232;
+  transform: translateY(-50%);
+}
+.search-box input {
+  height: 100%;
+  width: 100%;
+  border: none;
+  outline: none;
+  border-radius: 6px;
+  background-color: #fff;
+  padding: 0 15px 0 45px;
+}
+
+
+.nav .navOpenBtn,
+.nav .navCloseBtn {
+  display: none;
+}
   @media screen and (max-width: 1160px) {
     .nav {
       padding: 15px 100px;
