--- a/static/css/style.css
+++ b/static/css/style.css
@@ -45,10 +45,20 @@ body {
   font-weight: 500;
 }
 
-.nav .logout{
-  font-size: 22px;
+.nav .logo:hover{
+  color: #D4AF37;
+}
+
+.nav .logout i{
+  
   font-weight: 500;
+  font-size: 20px;
   color: #ffffff;
+  font-family: "Poppins", sans-serif;
+}
+
+.nav .logout i:hover{
+  color: #D4AF37;
 }
 
 .nav .nav-links {
@@ -59,12 +69,30 @@ body {
   transition: all 0.2s linear;
 }
 
-.nav .nav-links li :hover{
+.nav .nav-links li {
+  color: white;
+  text-decoration: none;
+  border: none;
+  background: none;
+  font-weight: 600;
+  font-family: 'Poppins', sans-serif;
+}
 
-  border: 1px solid #323232;
-  padding: 7px;
-  border-radius: 10px;
-  box-shadow: 0 3px #323232;
+.nav .nav-links li::before {
+  margin-left: auto;
+}
+
+.nav .nav-links li::after, .nav .nav-links li::before {
+  content: '';
+  width: 0%;
+  height: 2px;
+  background: #D4AF37;
+  display: block;
+  transition: 0.5s;
+}
+
+.nav .nav-links li:hover::after, .nav .nav-links li:hover::before {
+  width: 100%;
 }
 
 .nav.openSearch .nav-links a {
@@ -76,6 +104,11 @@ body {
   font-size: 20px;
   cursor: pointer;
 }
+
+.nav .search-icon:hover{
+  color: #D4AF37;
+}
+
 .nav .search-box {
   position: absolute;
   right: 620px;
@@ -308,11 +341,18 @@ p {
 
 .product-category{
   padding-left: 15px;
-  font-size: 30px;
-  font-weight: 500;
-  color: #fff;
-  margin-bottom: 40px;
+  font-size: 34px;
+  font-weight: 700;
+  color: #ffffff;
+  margin: 0;
   text-transform: capitalize;
+}
+
+.product span {
+  font-size: 14px;
+  color: #ffffffb9;
+  padding-left: 15px;
+  font-weight: 400;
 }
 
 
@@ -343,10 +383,14 @@ body .container .card {
 
 /* Design */
 .Products,
+.product,
 .Products::before,
 .Products::after {
   box-sizing: border-box;
 }
+
+
+
 
 .main{
   max-width: 1200px;
@@ -387,7 +431,7 @@ body .container .card {
   display: flex;
   flex-wrap: wrap;
   list-style: none;
-  margin: 0;
+  margin-top: 30px;
   padding: 0;
 }
 
@@ -492,9 +536,9 @@ body .container .card {
   transition: transform 0.3s ease-in-out;
 }
 .glassBox__price .product-price {
-  font-weight: 900;
+  font-weight: 800;
   font-size: 20px;
-  color: #323232;
+  color: #ffffff;
   width: 60px;
   display: flex;
   justify-content: center;
@@ -531,6 +575,7 @@ body .container .card {
 .glassBox:hover .glassBox__title {
   font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
   font-size: x-large;
+  color: #ffffff;
   transform: translateY(60px);
 }
 .glassBox:hover .glassBox__content {
@@ -539,20 +584,21 @@ body .container .card {
 
 .glassBox:hover .glassBox__price .product-price {
   color: #6c9e20;
-  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida     Sans Unicode", Geneva, Verdana, sans-serif;
   font-weight: 800;
+  font-size: x-large;
 }
 .glassBox:hover .glassBox__price .actual-price {
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-  font-weight: 700;
-  font-size: large;
+  font-weight: 300;
+  font-size: medium;
 }
 
 .glassBox:hover .glassBox__Button a {
-  background: #267d25bd;
-  color: #ffffff;
+  background: transparent;
+  color: #D4AF37;
+  border: 1px solid #D4AF37;
   font-weight: 100;
 }
+
 
 /*sdhd*/
 
@@ -829,22 +875,6 @@ section .title::after {
   animation: pulsate 1s ease-in-out;
 }
 
-/*  Footer  */
-footer {
-  background: #000000;
-  padding: 6px 16px;
-  color: #ffffff;
-  text-align: center;
-}
-
-footer span a {
-  color: #662574;
-  text-decoration: none;
-}
-
-footer span a:hover {
-  text-decoration: underline;
-}
 
 
 @keyframes pulsate {
@@ -984,3 +1014,136 @@ footer span a:hover {
   }
 }
 
+
+/*footer*/
+footer{
+  width: 100%;
+  bottom: 0;
+  left: 0;
+  
+  background: #fffffffc;
+}
+footer .content{
+  max-width: 1300px;
+  padding: 50px;
+  margin: auto;
+
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+footer .content p,a{
+  color: #000000d7;
+}
+footer .content .box{
+  width: 33%;
+  transition: all 0.4s ease;
+}
+footer .content .topic{
+  font-size: 22px;
+  font-weight: 600;
+  color: #000000;
+  margin-bottom: 16px;
+}
+
+footer a{
+  text-decoration: none;
+}
+footer .content p{
+  text-align: justify;
+}
+footer .content .lower .topic{
+  margin: 10px 0;
+}
+footer .content .lower i{
+  padding-right: 10px;
+  font-size: 20px;
+  color: #000000;
+}
+footer .content .middle{
+  padding-left: 80px;
+}
+footer .content .middle a{
+  line-height: 32px;
+}
+footer .content .right input[type="email"]{
+  height: 45px;
+  width: 100%;
+  outline: none;
+  color: #00000092;
+  background: #ffffff;
+  border-radius: 5px;
+  padding-left: 10px;
+  font-size: 17px;
+  border: 2px solid #222222;
+}
+footer .content .right input[type="submit"]{
+  height: 42px;
+  width: 100%;
+  font-size: 18px;
+  color: #ffffff;
+  background: #D4AF37;
+  outline: none;
+  border-radius: 5px;
+  font-weight: 500;
+  letter-spacing: 1px;
+  cursor: pointer;
+  margin-top: 12px;
+  border: 2px solid #D4AF37;
+  transition: all 0.3s ease-in-out;
+}
+.content .right input[type="submit"]:hover{
+  background: none;
+  color:  #D4AF37;
+}
+footer .content .media-icons a{
+  font-size: 40px;
+  height: 45px;
+  width: 45px;
+  display: inline-block;
+  text-align: center;
+  line-height: 43px;
+  margin: 30px 5px 0 0;
+  transition: all 0.3s ease;
+}
+.content .media-icons a:hover{
+  border-color: #D4AF37;
+}
+footer .bottom{
+  width: 100%;
+  text-align: right;
+  color: #000000;
+  padding: 0 40px 5px 0;
+}
+footer .bottom a{
+  color: #D4AF37;
+}
+footer a{
+  transition: all 0.3s ease;
+}
+
+@media (max-width:1100px) {
+  footer .content .middle{
+    padding-left: 50px;
+  }
+}
+@media (max-width:950px){
+  footer .content .box{
+    width: 50%;
+  }
+  .content .right{
+    margin-top: 40px;
+  }
+}
+@media (max-width:560px){
+  footer{
+    position: relative;
+  }
+  footer .content .box{
+    width: 100%;
+    margin-top: 30px;
+  }
+  footer .content .middle{
+    padding-left: 0;
+  }
+}
