--- a/templates/contact.html
+++ b/templates/contact.html
@@ -31,37 +31,46 @@
             <a href="{{url_for('login')}}"><i class="ri-logout-box-line"></i></a>
         </div>
       </nav>
-    
+
+
+      <div class="hero-image">
+        <div class="hero-text">
+          <h1>Contact Us</h1>
+          <p> Where Trends Meet Timeless Elegance.</p>
+          
+        </div>
+      </div>
+
+
       <section class="contact" id="contact">
         <div class="max-width">
-          <h2 class="title">Contact Us</h2>
           <div class="contact-content">
             <div class="column left">
               <div class="text">Get in Touch</div>
-              <p>Feel free to get in touch with me. I am always open to discussing new projects, creative ideas or opportunities to be a part of your visions. Email me with any questions or inquiries. I'll happy to answer your questions and set up a meeting with you.</p>
+              <p>Stay in the loop with the latest arrivals, exclusive promotions, and styling tips by following us on social media. Join our community of fashion enthusiasts who celebrate the beauty of self-expression through clothing.</p>
               <div class="icons">
       
                   <div class="row">
                     <i class="fa-solid fa-user-large"></i>
                     <div class="info">
-                      <div class="head">Name</div>
-                      <div class="sub-title"><a href="#" style="text-decoration: none; color: #ffffffd7;"> Vishva MV</a></div>
+                      <div class="head">Phone:</div>
+                      <div class="sub-title"><a href="#" style="text-decoration: none; color: #ffffffd7;"> +91 782592345</a></div>
                     </div>
                   </div>
       
                 <div class="row">
                   <i class="fa-solid fa-location-dot"></i>
                   <div class="info">
-                    <div class="head">  Address</div>
-                    <div class="sub-title">  Thanjavur, Tamilnadu, India</div>
+                    <div class="head">  Store Location:</div>
+                    <div class="sub-title">  No 165, 3rd Flr TS No 65/1,near HDFC, Eswari Nagar, Thanjavur, Tamil Nadu 613004</div>
                   </div>
                 </div>
       
                 <div class="row">
                   <i class="fa-solid fa-envelope"></i>
                   <div class="info">
-                    <div class="head">Email</div>
-                    <div class="sub-title"><a href="mailto:dev.vishvamv@gmail.com" style="text-decoration: none; color: #ffffffd7;"> dev.vishvamv@gmail.com</a></div>
+                    <div class="head">Email:</div>
+                    <div class="sub-title"><a href="mailto:dev.vishvamv@gmail.com" style="text-decoration: none; color: #ffffffd7;"> groove.12fox@gmail.com</a></div>
                   </div>
                 </div>
               </div>
@@ -97,6 +106,44 @@
           </div>
         </div>
       </section>
+
+      <footer>
+        <div class="content">
+          <div class="left box">
+            <div class="upper">
+              <div class="topic">About us</div>
+              <p>12Fox is more than a clothing store; we're curators of style, offering curated fashion that empowers individuals to express their unique identity with confidence..</p>
+            </div>
+            
+          </div>
+          <div class="middle box">
+            <div class="topic">Shopping &amp; Categories</div>
+            <div><a href="{{url_for('base')}}">Men’s Shopping</a></div>
+            <div><a href="{{url_for('base')}}">Women’s Shopping</a></div>
+            <div><a href="{{url_for('base')}}">kid’s Shopping</a></div>
+            <div><a href="{{url_for('base')}}">Latest Products</a></div>
+            
+          </div>
+          <div class="right box">
+            <div class="topic">Subscribe us</div>
+            <form action="https://gmail.us21.list-manage.com/subscribe/post?u=e57daffa0ce944eba5a64a287&amp;id=3270c8cdc0&amp;f_id=0038f9e6f0" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_self" novalidate="">
+              <input type="email" name="EMAIL" class="required email" id="mce-EMAIL" required="" placeholder="Your Email Address..">
+              <input type="submit" name="subscribe" id="mc-embedded-subscribe" class="button" value="Subscribe">
+              <input type="hidden" name="_next" value="">
+              <div class="media-icons">
+                <a href="#"><i class="ri-facebook-box-fill"></i></a>
+                <a href="#"><i class="ri-instagram-fill"></i></a>
+                <a href="#"><i class="ri-twitter-x-fill"></i></a>
+                <a href="#"><i class="ri-youtube-fill"></i></a>
+              </div>
+            </form>
+          </div>
+        </div>
+        <div class="bottom">
+          <p>Copyright © 2023 <a href="#">12Fox</a> All rights reserved</p>
+        </div>
+      </footer>
+     
 
     </body>
     <script src="/static/js/nav.js"></script>
