--- a/templates/contact.html
+++ b/templates/contact.html
@@ -19,8 +19,9 @@
         <ul class="nav-links">
           <i class="uil uil-times navCloseBtn"></i>
           <li><a href="{{url_for('base')}}">Home</a></li>
+          <li><a href="{{url_for('base')}}">Shop</a></li>
           <li><a href="#contact">Contact Us</a></li>
-          <li><a href="#">About us</a></li>
+          
         </ul>
         <i class="uil uil-search search-icon" id="searchIcon"></i>
         <div class="search-box">
