--- a/static/css/loginreg.css
+++ b/static/css/loginreg.css
@@ -306,7 +306,7 @@ font-size: 30px;
     color: #fff;
     margin-bottom: 30px;
     border: none;
-    border-bottom: 1px solid #e42;
+    border-bottom: 1px solid #D4AF37;
     outline: none;
     background: transparent;
 }
@@ -330,122 +330,53 @@ font-size: 30px;
 .user-box input:valid~label{
     top: -20px;
     left: 0;
-    color: #e42;
+    color: #D4AF37;
     font-size: 13px;
 }
 
-.Login-box form button {
-    position: relative;
-    display: inline-block;
-    color: #e42;
-    font-size: 16px;
-    text-decoration: none;
-    text-transform: uppercase;
-    overflow: hidden;
-    transition: all 0.5s;
-    background-color: transparent;
-    margin-right: 40px;
-    letter-spacing: 4px;
-    left: 30%;
-    
+.Login-box .btn {
+  display: inline-block;
+  font-family: sans-serif;
+  font-weight: 600;
+  font-size: 16px;
+  color: #fff;
+  margin: 1rem auto;
+  padding: 0.7rem 2rem;
+  border-radius: 30em;
+  border-style: none;
+  position: relative;
+  display: block;
+  z-index: 1;
+  overflow: hidden;
+  text-decoration: none;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  background-color: transparent;
+  border: 1px solid #D4AF37;
 }
 
-.Login-box button:hover{
-    background: linear-gradient(45deg,#e42,#e42);
-    color: #fff;
-    border-radius: 5px;
-    box-shadow: 0 0 5px #e42,0 0 25px #e42,0 0 50px #e42,0 0 100px #e42;
-
-}
-.Login-box button span{
-    position: absolute;
-    display: block;
-}
-
-.Login-box button span:nth-child(1){
-    top: 0;
-    left: -100%;
-    width: 100px;
-    height: 2px;
-    background: linear-gradient(90deg, transparent, #e42,#d703f3);
-    animation: animl 1s linear infinite;
-    animation-delay: 0s ;
+.Login-box button::before {
+  content: "";
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: #D4AF37;
+  transform: translateX(-101%);
+  transition: all .3s ease;
+  z-index: -1;
 }
 
-@keyframes animl {
-  0%{
-      left: -100%;
-  }
-  50%,
-  100%{
-      left: 100%;
-  }
+.Login-box button:hover {
+  color: #ffffff;
+  transition: all .3s ease;
 }
 
-
-.Login-box button span:nth-child(2){
-    top: -100%;
-    right: 0;
-    width: 2px;
-    height: 100%;
-    background: linear-gradient(180deg, transparent, #e42,#d703f3);
-    animation: anim2 1s linear infinite;
-    animation-delay: 0.25s ;
-
+button:hover::before {
+  transform: translateX(0);
 }
 
-@keyframes anim2 {
-    0%{
-        top: -100%;
-    }
-    50%,
-    100%{
-        top: 100%;
-    }
-}
-
-
-.Login-box button span:nth-child(3){
-    bottom: 0;
-    right: -100%;
-    width: 100%;
-    height: 2px;
-    background: linear-gradient(270deg, transparent, #e42,#d703f3);
-    animation: anim3 1s linear infinite;
-    animation-delay: 0.5s ;
-
-}
-
-@keyframes anim3 {
-    0%{
-        right: -100%;
-    }
-    50%,
-    100%{
-        right: 100%;
-    }
-}
-
-.Login-box button span:nth-child(4){
-    bottom: -100%;
-    left: 0;
-    width: 2px;
-    height: 100%;
-    background: linear-gradient(360deg, transparent, #e42,#d703f3);
-    animation: anim4 1s linear infinite;
-    animation-delay: 0.75s ;
-
-}
-
-@keyframes anim4 {
-    0%{
-        bottom: -100%;
-    }
-    50%,
-    100%{
-        bottom: 100%;
-    }
-}
 .login_signup {
     font-size: 16px;
     text-align: center;
@@ -456,7 +387,7 @@ font-size: 30px;
 
 .login_signup a{
     text-decoration: none;
-    color: #e42;
+    color: #D4AF37;
     letter-spacing: 1.5px;
     box-sizing: border-box;
 }
